# moteur_ia_rust

./: .gitignore  Cargo.toml  old_programme.md  optimisation_moteur_echecs.md  optimisation_moteur_echecs_quiescence (1).md  optimisation_moteur_echecs_quiescence_tutoriel.md  programme.md  readme.md
.cargo/: config.toml
docs/: evaluation_roadmap.md
note_personnel/: transposition.md
src/: affichage.rs  api_type.rs  attack_tables.rs  board.rs  chess_move.rs  eval.rs  evaluation.rs  fen.rs  legal_move.rs  legality.rs  lib.rs  main.rs  make_move.rs  notation.rs  partie.rs  perft.rs  position_key.rs  pseudo_legal_move.rs  web_server.rs  zobrist.rs
tests/: move_tests.rs  partie_tests.rs  undo_move_tests.rs
tuto_single/: README_WEB.md  old_programme.md  optimisation_moteur_echecs_undo_move.md  programme_visuel_web.md
web/: index.html  package-lock.json  package.json
web/src/: api.ts  app.tsx  main.tsx  pieceImages.ts  style.css  type.ts
web/src/components/: chessBoard.tsx  controls.tsx  gameStatus.tsx  moveList.tsx  sideChoice.tsx  square.tsx
