[package]
name = "moteur_ia"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false